--- a/index.html
+++ b/index.html
@@ -20,12 +20,81 @@
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+  <title>unplugged</title>
 </head>
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+      <figure>
+        <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
+      </figure>
+
+      <div class=" header-divider">
+      </div>
+
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank" rel="noopener">FAQ</a> </li>
+          <li><a href="about.index.html" target="_blank" rel="noopener">About</a> </li>
+        </ul>
+
+      </nav>
+    </div>
+  </header>
+
+  <main>
+
+    <section class="hero-area">
+      <div class="content-wrapper">
+
+        <h1>Retreat from the desk, return refreshed.</h1>
+
+      </div>
+    </section>
+
+    <aside>
+      <div class="content=wrapper">
+
+        <div class="form-description">
+          <h3>Want to join the next retreat?</h3>
+          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+        </div>
+
+        <div class="form">
+          <h3>Find out more</h3>
+          <input type="text" name="name" value="email address">
+          <input type="button" value="Download Itinerary">
+        </div>
+
+      </div>
+
+    </aside>
+
+  </main>
+
+  <!--footer content-wrapper-->
+
+  <footer class="footer-content">
+    <div>
+      <div>
+        <div>
+          <div>
+            <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener"></a></p>
+            <!--other social links here -->
+          </div>
+        </div>
+      </div>
+      <!--footer content ends-->
+    </div>
+    <!--footer content-wrapper ends-->
+
+    <div class="contact">
+      <address></address>
+    </div>
+  </footer>
+
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
