--- a/index.html
+++ b/index.html
@@ -27,13 +27,11 @@
 
   <header>
     <div class="content-wrapper">
-      <figure>
-        <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
-      </figure>
-
-      <div class=" header-divider">
+      <a href="#">
+        <img src="img/unpluggedlogo.png" alt="unplugged logo">
+      </a>
+      <div class="header-divider">
       </div>
-
       <nav>
         <ul>
           <li><a href="faq/index.html" target="_blank" rel="noopener">FAQ</a> </li>
@@ -48,52 +46,131 @@
 
     <section class="hero-area">
       <div class="content-wrapper">
-
         <h1>Retreat from the desk, return refreshed.</h1>
-
       </div>
     </section>
 
     <aside>
       <div class="content=wrapper">
-
         <div class="form-description">
           <h3>Want to join the next retreat?</h3>
           <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
         </div>
-
         <div class="form">
           <h3>Find out more</h3>
           <input type="text" name="name" value="email address">
           <input type="button" value="Download Itinerary">
         </div>
-
       </div>
-
     </aside>
 
+    <section class="features">
+      <div class="content-wrapper">
+        <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+        <!--add your features content here -->
+        <div class="features-items">
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4
+              breakout rooms.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Private chef team providing on demand meals - just like your team
+              kitchen.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              5 outdoor obstacle courses, including private beach 1/2 mile from
+              bungalow</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Retreat facilitator to manage your day to day activities so you all get
+              a chance to reset
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Dedicated computer room for times that you must wifi</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="reviews">
+      <div class="content-wrapper">
+        <h2>Be a better team in 5 days, like this one.</h2>
+        <article>
+          <div>
+            <a href="#"></a>
+            <h3>LaCrue Bottling Co. October 2018</h3>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet officia, deleniti incidunt nihil aliquid
+              harum dolorem commodi rerum! Obcaecati a impedit ducimus saepe, aliquid odio sint. Necessitatibus, eaque.
+              Iusto, facere.</p>
+          </div>
+        </article>
+      </div>
+    </section>
+
   </main>
+  <!-- main wrapper -->
 
   <!--footer content-wrapper-->
-
-  <footer class="footer-content">
-    <div>
-      <div>
-        <div>
-          <div>
-            <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener"></a></p>
-            <!--other social links here -->
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="contact">
+          <h4>Contact</h4>
+          <address>
+            <p>
+              555-5555-5555,<br>
+              hello@unplugged.com
+            </p>
+          </address>
+        </div>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p>
+              <a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener"></a>
+            </p>
+            <p>
+              <a href="https://twitter.com/yoursite" target="_blank" rel="noopener"></a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener"></a>
+            </p>
           </div>
         </div>
       </div>
       <!--footer content ends-->
     </div>
     <!--footer content-wrapper ends-->
-
-    <div class="contact">
-      <address></address>
+    <div class="copyright">
+      <p>Copyright 202X|Unplugged</p>
     </div>
   </footer>
+
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
