Code About page

--- a/about/index.html
+++ b/about/index.html
@@ -24,8 +24,104 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+      <a href="#">
+        <img src="img/unpluggedlogo.png" alt="unplugged logo">
+      </a>
+      <div class="header-divider">
+      </div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank" rel="noopener">FAQ</a> </li>
+          <li><a href="about.index.html" target="_blank" rel="noopener">About</a> </li>
+        </ul>
+
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="mission"></section>
+    <div class="content-wrapper">
+      <div class="mission-content">
+        <h1>Our Mission - we want to make you the team you always wanted to be</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti, laborum architecto. Eius laboriosam
+          veritatis quod distinctio tempore aut facere, ipsam reiciendis neque est ipsum corporis illum ut iure
+          inventore temporibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti, laborum architecto. Eius laboriosam
+          veritatis quod distinctio tempore aut facere, ipsam reiciendis neque est ipsum corporis illum ut iure
+          inventore temporibus!</p>
+      </div>
+    </div> <!-- mission content ends -->
+  </main>
+
+  <section class="map">
+    <figure>
+
+    </figure>
+  </section>
+
+  <section class="contact-content">
+    <div>
+      <h2>Contact us, because you all need this</h2>
+      <h4>General Information</h4>
+      <address>
+        <p>
+          333 Main st. Lake Geneva, WI 52147 <br>
+          555-555-555 <br>
+          hello@unplugged.com
+        </p>
+      </address>
+    </div>
+    <div>
+      <h4>Chat with a Facilitator</h4>
+      <p>
+        555-555-555 <br>
+        facilitator@unplugged.com <br>
+      </p>
+
+    </div>
+
+  </section>
+
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="contact">
+          <h4>Contact</h4>
+          <address>
+            <p>
+              555-5555-5555,<br>
+              hello@unplugged.com
+            </p>
+          </address>
+        </div>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p>
+              <a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener"></a>
+            </p>
+            <p>
+              <a href="https://twitter.com/yoursite" target="_blank" rel="noopener"></a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener"></a>
+            </p>
+          </div>
+        </div>
+      </div>
+      <!--footer content ends-->
+    </div>
+    <!--footer content-wrapper ends-->
+    <div class="copyright">
+      <p>Copyright 202X|Unplugged</p>
+    </div>
+  </footer>
+
+
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
