Add flexbox CSS properties

--- a/faq/index.html
+++ b/faq/index.html
@@ -26,15 +26,15 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="#">
+      <a href="../index.html">
         <img src="img/unpluggedlogo.png" alt="unplugged logo">
       </a>
       <div class="header-divider">
       </div>
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank" rel="noopener">FAQ</a> </li>
-          <li><a href="about.index.html" target="_blank" rel="noopener">About</a> </li>
+          <li><a href="../faq/index.html" target="_blank" rel="noopener">FAQ</a> </li>
+          <li><a href="../about/index.html" target="_blank" rel="noopener">About</a> </li>
         </ul>
 
       </nav>
@@ -44,52 +44,35 @@
   <main>
     <section class="faq"></section>
     <div class="content-wrapper">
+
+      <h2>Frequently Asked Questions</h2>
       <div class="faq-content">
-        <h2>Frequently Asked Questions</h2>
         <h4>How do I get to the Unplugged retreat?</h4>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti, laborum architecto. Eius laboriosam
           veritatis quod distinctio tempore aut facere, ipsam reiciendis neque est ipsum corporis illum ut iure
           inventore temporibus!</p>
+      </div>
+      <div class="faq-content">
         <h4>What kind of team is right for the Unplugged retreat?</h4>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti, laborum architecto. Eius laboriosam
           veritatis quod distinctio tempore aut facere, ipsam reiciendis neque est ipsum corporis illum ut iure
           inventore temporibus!</p>
+      </div>
+      <div class="faq-content">
         <h4>What size team can you accommodate?</h4>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti, laborum architecto. Eius laboriosam
           veritatis quod distinctio tempore aut facere, ipsam reiciendis neque est ipsum corporis illum ut iure
           inventore temporibus!</p>
+      </div>
+      <div class="faq-content">
         <h4>Is there really no wifi available?</h4>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti, laborum architecto. Eius laboriosam
           veritatis quod distinctio tempore aut facere, ipsam reiciendis neque est ipsum corporis illum ut iure
           inventore temporibus!</p>
       </div>
     </div>
+    <!-- FAQ content wrapper ends -->
   </main>
-
-
-  <section class="contact-content">
-    <div>
-      <h2>Contact us, because you all need this</h2>
-      <h4>General Information</h4>
-      <address>
-        <p>
-          333 Main st. Lake Geneva, WI 52147 <br>
-          555-555-555 <br>
-          hello@unplugged.com
-        </p>
-      </address>
-    </div>
-    <div>
-      <h4>Chat with a Facilitator</h4>
-      <p>
-        555-555-555 <br>
-        facilitator@unplugged.com <br>
-      </p>
-
-    </div>
-
-  </section>
-
 
   <footer>
     <div class="content-wrapper">
@@ -122,7 +105,7 @@
     </div>
     <!--footer content-wrapper ends-->
     <div class="copyright">
-      <p>Copyright 202X|Unplugged</p>
+      <p>Copyright 202X | Unplugged</p>
     </div>
   </footer>
 
