--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>About</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,17 +24,18 @@
 
 <body>
 
+  <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#">
+      <a href="../index.html">
         <img src="img/unpluggedlogo.png" alt="unplugged logo">
       </a>
       <div class="header-divider">
       </div>
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank" rel="noopener">FAQ</a> </li>
-          <li><a href="about.index.html" target="_blank" rel="noopener">About</a> </li>
+          <li><a href="../faq/index.html" target="_blank" rel="noopener">FAQ</a> </li>
+          <li><a href="../about/index.html" target="_blank" rel="noopener">About</a> </li>
         </ul>
 
       </nav>
@@ -42,48 +43,57 @@
   </header>
 
   <main>
-    <section class="mission"></section>
-    <div class="content-wrapper">
-      <div class="mission-content">
+
+    <section class="mission">
+      <div class="content-wrapper">
         <h1>Our Mission - we want to make you the team you always wanted to be</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti, laborum architecto. Eius laboriosam
-          veritatis quod distinctio tempore aut facere, ipsam reiciendis neque est ipsum corporis illum ut iure
-          inventore temporibus!</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti, laborum architecto. Eius laboriosam
-          veritatis quod distinctio tempore aut facere, ipsam reiciendis neque est ipsum corporis illum ut iure
-          inventore temporibus!</p>
+        <div class="mission-content">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti, laborum architecto. Eius laboriosam
+            veritatis quod distinctio tempore aut facere, ipsam reiciendis neque est ipsum corporis illum ut iure
+            inventore temporibus!
+          </p>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti, laborum architecto. Eius laboriosam
+            veritatis quod distinctio tempore aut facere, ipsam reiciendis neque est ipsum corporis illum ut iure
+            inventore temporibus!
+          </p>
+        </div>
+      </div> <!-- mission content ends -->
+    </section>
+
+
+    <section class="map">
+      <figure>
+      </figure>
+    </section>
+
+    <section class="contact-content">
+      <div class="content-wrapper">
+        <h2>Contact us, because you all need this</h2>
+        <div class="contact-content">
+          <div>
+            <h4>General Information</h4>
+            <address>
+              <p>
+                333 Main st. Lake Geneva, WI 52147 <br>
+                555-555-555 <br>
+                hello@unplugged.com
+              </p>
+            </address>
+          </div>
+          <div>
+            <h4>Chat with a Facilitator</h4>
+            <address>
+              <p>
+                555-555-555 <br>
+                facilitator@unplugged.com <br>
+              </p>
+            </address>
+          </div>
+        </div>
       </div>
-    </div> <!-- mission content ends -->
+    </section>
   </main>
-
-  <section class="map">
-    <figure>
-
-    </figure>
-  </section>
-
-  <section class="contact-content">
-    <div>
-      <h2>Contact us, because you all need this</h2>
-      <h4>General Information</h4>
-      <address>
-        <p>
-          333 Main st. Lake Geneva, WI 52147 <br>
-          555-555-555 <br>
-          hello@unplugged.com
-        </p>
-      </address>
-    </div>
-    <div>
-      <h4>Chat with a Facilitator</h4>
-      <p>
-        555-555-555 <br>
-        facilitator@unplugged.com <br>
-      </p>
-
-    </div>
-
-  </section>
+  <!-- main wrapper -->
 
 
   <footer>
@@ -98,6 +108,7 @@
             </p>
           </address>
         </div>
+
         <div class="social">
           <h4>Social</h4>
           <div class="social-icons">
@@ -117,7 +128,7 @@
     </div>
     <!--footer content-wrapper ends-->
     <div class="copyright">
-      <p>Copyright 202X|Unplugged</p>
+      <p>Copyright 202X | Unplugged</p>
     </div>
   </footer>
 
