--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="#">
+      <a href="index.html">
         <img src="img/unpluggedlogo.png" alt="unplugged logo">
       </a>
       <div class="header-divider">
@@ -35,7 +35,7 @@
       <nav>
         <ul>
           <li><a href="faq/index.html" target="_blank" rel="noopener">FAQ</a> </li>
-          <li><a href="about.index.html" target="_blank" rel="noopener">About</a> </li>
+          <li><a href="about/index.html" target="_blank" rel="noopener">About</a> </li>
         </ul>
 
       </nav>
