Format mobile layout

--- a/about/index.html
+++ b/about/index.html
@@ -37,7 +37,6 @@
           <li><a href="../faq/index.html" target="_blank" rel="noopener">FAQ</a> </li>
           <li><a href="../about/index.html" target="_blank" rel="noopener">About</a> </li>
         </ul>
-
       </nav>
     </div>
   </header>
@@ -66,7 +65,7 @@
       </figure>
     </section>
 
-    <section class="contact-content">
+    <section class="contact-section">
       <div class="content-wrapper">
         <h2>Contact us, because you all need this</h2>
         <div class="contact-content">
@@ -92,6 +91,7 @@
         </div>
       </div>
     </section>
+
   </main>
   <!-- main wrapper -->
 
