--- a/faq/index.html
+++ b/faq/index.html
@@ -36,13 +36,11 @@
           <li><a href="../faq/index.html" target="_blank" rel="noopener">FAQ</a> </li>
           <li><a href="../about/index.html" target="_blank" rel="noopener">About</a> </li>
         </ul>
-
       </nav>
     </div>
   </header>
 
-  <main>
-    <section class="faq"></section>
+  <main class="faq">
     <div class="content-wrapper">
 
       <h2>Frequently Asked Questions</h2>
