--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
       </div>
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank" rel="noopener">FAQ</a> </li>
-          <li><a href="about/index.html" target="_blank" rel="noopener">About</a> </li>
+          <li><a href="faq/index.html" target="_blank" rel="noopener">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank" rel="noopener">About</a></li>
         </ul>
-
       </nav>
     </div>
   </header>
@@ -62,12 +61,12 @@
           <input type="button" value="Download Itinerary">
         </div>
       </div>
+      <!--Aside content wrapper ends -->
     </aside>
 
     <section class="features">
       <div class="content-wrapper">
         <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
-        <!--add your features content here -->
         <div class="features-items">
           <article>
             <p class="fontawesome-icon">
@@ -111,7 +110,8 @@
             <p class="fontawesome-icon">
             </p>
             <p class="features-item-description">
-              Dedicated computer room for times that you must wifi</p>
+              Dedicated computer room for times that you must wifi
+            </p>
           </article>
         </div>
       </div>
@@ -167,7 +167,7 @@
     </div>
     <!--footer content-wrapper ends-->
     <div class="copyright">
-      <p>Copyright 202X|Unplugged</p>
+      <p>Copyright 202X | Unplugged</p>
     </div>
   </footer>
 
