Apply map iframe code

--- a/about/index.html
+++ b/about/index.html
@@ -67,6 +67,10 @@
 
     <section class="map">
       <figure>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90506.89859972817!2d-63.04366722261631!3d44.85536088243684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4b5bb5c999c1c7d3%3A0x654dae4144e302b3!2sLake%20Charlotte%2C%20Nova%20Scotia!5e0!3m2!1sen!2sca!4v1677680921731!5m2!1sen!2sca"
+          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
       </figure>
     </section>
 
