--- a/faq/index.html
+++ b/faq/index.html
@@ -35,9 +35,11 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="../index.html">
-        <img src="../img/unpluggedlogo.png" alt="unplugged logo">
-      </a>
+      <figure>
+        <a href="../index.html">
+          <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
       <div class="header-divider">
       </div>
       <nav>
@@ -51,31 +53,26 @@
 
   <main class="faq">
     <div class="content-wrapper">
-
       <h2>Frequently Asked Questions</h2>
       <div class="faq-content">
         <h4>How do I get to the Unplugged retreat?</h4>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti, laborum architecto. Eius laboriosam
-          veritatis quod distinctio tempore aut facere, ipsam reiciendis neque est ipsum corporis illum ut iure
-          inventore temporibus!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
       </div>
       <div class="faq-content">
         <h4>What kind of team is right for the Unplugged retreat?</h4>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti, laborum architecto. Eius laboriosam
-          veritatis quod distinctio tempore aut facere, ipsam reiciendis neque est ipsum corporis illum ut iure
-          inventore temporibus!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
       </div>
       <div class="faq-content">
         <h4>What size team can you accommodate?</h4>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti, laborum architecto. Eius laboriosam
-          veritatis quod distinctio tempore aut facere, ipsam reiciendis neque est ipsum corporis illum ut iure
-          inventore temporibus!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua.</p>
       </div>
       <div class="faq-content">
         <h4>Is there really no wifi available?</h4>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti, laborum architecto. Eius laboriosam
-          veritatis quod distinctio tempore aut facere, ipsam reiciendis neque est ipsum corporis illum ut iure
-          inventore temporibus!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
       </div>
     </div>
     <!-- FAQ content wrapper ends -->
