--- a/about/index.html
+++ b/about/index.html
@@ -88,7 +88,7 @@
             <h4>General Information</h4>
             <address>
               <p>
-                333 Main st. Lake Geneva, WI 52147 <br>
+                333 Main St. Lake Geneva, WI 52147 <br>
                 555-555-555 <br>
                 hello@unplugged.com
               </p>
