--- a/faq/index.html
+++ b/faq/index.html
@@ -44,7 +44,7 @@
       </div>
       <nav>
         <ul>
-          <li><a href="../faq/index.html" target="_blank" rel="noopener">FAQ</a> </li>
+          <li><a href="index.html" target="_blank" rel="noopener">FAQ</a> </li>
           <li><a href="../about/index.html" target="_blank" rel="noopener">About</a> </li>
         </ul>
       </nav>
